--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "tailwindcss": "^4.1.4"
   },
   "scripts": {
-    "dev": "npx tailwindcss -i ./css/input.css -o ./css/output.css   --watch"
+    "dev": "npx tailwindcss -i ./css/input.css -o ./css/output.css   --watch",
+    "build": "npx tailwindcss -i ./css/input.css -o ./css/output.css --minify"
   }
 }
